exports[`Select statement > works 1`] = `
[
  "WITH \`authorized_categories\` AS (",
  "  SELECT categories.*",
  "  FROM \`categories\`",
  "    INNER JOIN \`brands\` AS \`categories>brand\` ON \`categories\`.\`brand_id\` = \`categories>brand\`.\`id\`",
  "  WHERE (",
  "      \`categories>brand\`.\`title\` IN ('brand1', 'brand2')",
  "      OR EXISTS (",
  "        SELECT *",
  "        FROM \`articles\` AS \`categories>articles\`",
  "        WHERE \`categories>articles\`.\`category_id\` = \`categories\`.\`id\`",
  "          AND \`categories>articles\`.\`id\` = '86e13902-a8c7-444b-aa7d-68ea8bffc314'",
  "      )",
  "    )",
  "),",
  "\`authorized_tags\` AS (",
  "  SELECT tags.*",
  "  FROM \`tags\`",
  "  WHERE EXISTS (",
  "      SELECT *",
  "      FROM \`article_tags\` AS \`tags>articles\`",
  "        INNER JOIN \`articles\` AS \`tags>articles>article\` ON \`tags>articles\`.\`article_id\` = \`tags>articles>article\`.\`id\`",
  "      WHERE \`tags>articles\`.\`tag_id\` = \`tags\`.\`id\`",
  "        AND (",
  "          \`tags>articles>article\`.\`id\` = '6b818de6-b549-4ab1-b95e-9436993e8a0e'",
  "          OR NOT \`tags>articles>article\`.\`category_id\` IS NOT NULL",
  "          OR EXISTS (",
  "            SELECT *",
  "            FROM \`article_tags\` AS \`tags>articles>article>tags\`",
  "            WHERE \`tags>articles>article>tags\`.\`article_id\` = \`tags>articles>article\`.\`id\`",
  "          )",
  "        )",
  "    )",
  "),",
  "\`authorized_articles\` AS (",
  "  SELECT articles.*",
  "  FROM \`articles\`",
  "    LEFT JOIN \`categories\` AS \`articles>category\` ON \`articles\`.\`category_id\` = \`articles>category\`.\`id\`",
  "    LEFT JOIN \`brands\` AS \`articles>category>brand\` ON \`articles>category\`.\`brand_id\` = \`articles>category>brand\`.\`id\`",
  "  WHERE \`articles>category>brand\`.\`title\` IN ('brand1', 'brand2')",
  ")",
  "SELECT JSON_OBJECT(",
  "    \\"id\\",",
  "    \`articles\`.\`id\`,",
  "    \\"title\\",",
  "    \`articles\`.\`title\`,",
  "    \\"category\\",",
  "    IF(",
  "      \`articles>category\`.\`id\` IS NOT NULL,",
  "      JSON_OBJECT(",
  "        \\"brand\\",",
  "        IF(",
  "          \`articles>category>brand\`.\`id\` IS NOT NULL,",
  "          JSON_OBJECT(",
  "            \\"id\\",",
  "            \`articles>category>brand\`.\`id\`,",
  "            \\"title\\",",
  "            \`articles>category>brand\`.\`title\`",
  "          ),",
  "          NULL",
  "        ),",
  "        \\"id\\",",
  "        \`articles>category\`.\`id\`,",
  "        \\"title\\",",
  "        \`articles>category\`.\`title\`",
  "      ),",
  "      NULL",
  "    ),",
  "    \\"tags\\",",
  "    (",
  "      SELECT JSON_ARRAYAGG(",
  "          JSON_OBJECT(",
  "            \\"tag\\",",
  "            IF(",
  "              \`articles>tags>tag\`.\`id\` IS NOT NULL,",
  "              JSON_OBJECT(",
  "                \\"id\\",",
  "                \`articles>tags>tag\`.\`id\`,",
  "                \\"title\\",",
  "                \`articles>tags>tag\`.\`title\`",
  "              ),",
  "              NULL",
  "            )",
  "          )",
  "          LIMIT 10",
  "        )",
  "      FROM \`article_tags\` AS \`articles>tags\`",
  "        INNER JOIN \`authorized_tags\` AS \`articles>tags>tag\` ON \`articles>tags\`.\`tag_id\` = \`articles>tags>tag\`.\`id\`",
  "        INNER JOIN \`authorized_articles\` AS \`articles>tags>article\` ON \`articles>tags\`.\`article_id\` = \`articles>tags>article\`.\`id\`",
  "      WHERE \`articles>tags\`.\`article_id\` = \`articles\`.\`id\`",
  "        AND \`articles>tags>article\`.\`id\` = 'c96be474-23fa-452d-97b3-094c226c4675'",
  "    )",
  "  )",
  "FROM \`articles\`",
  "  LEFT JOIN \`authorized_categories\` AS \`articles>category\` ON \`articles\`.\`category_id\` = \`articles>category\`.\`id\`",
  "  LEFT JOIN \`brands\` AS \`articles>category>brand\` ON \`articles>category\`.\`brand_id\` = \`articles>category>brand\`.\`id\`",
  "  AND \`articles>category>brand\`.\`title\` IN ('brand1', 'brand2')"
]
`;

exports[`Select statement > works 2`] = `
[
  "SELECT JSON_OBJECT(",
  "    \\"id\\",",
  "    \`articles\`.\`id\`,",
  "    \\"title\\",",
  "    \`articles\`.\`title\`,",
  "    \\"category\\",",
  "    IF(",
  "      \`articles>category\`.\`id\` IS NOT NULL,",
  "      JSON_OBJECT(",
  "        \\"brand\\",",
  "        JSON_OBJECT(",
  "          \\"id\\",",
  "          \`articles>category>brand\`.\`id\`,",
  "          \\"title\\",",
  "          \`articles>category>brand\`.\`title\`",
  "        ),",
  "        \\"id\\",",
  "        \`articles>category\`.\`id\`,",
  "        \\"title\\",",
  "        \`articles>category\`.\`title\`",
  "      ),",
  "      NULL",
  "    ),",
  "    \\"tags\\",",
  "    (",
  "      SELECT JSON_ARRAYAGG(",
  "          JSON_OBJECT(",
  "            \\"tag\\",",
  "            JSON_OBJECT(",
  "              \\"id\\",",
  "              \`articles>tags>tag\`.\`id\`,",
  "              \\"title\\",",
  "              \`articles>tags>tag\`.\`title\`",
  "            )",
  "          )",
  "          LIMIT 10",
  "        )",
  "      FROM \`article_tags\` AS \`articles>tags\`",
  "        INNER JOIN \`tags\` AS \`articles>tags>tag\` ON \`articles>tags\`.\`tag_id\` = \`articles>tags>tag\`.\`id\`",
  "      WHERE \`articles>tags\`.\`article_id\` = \`articles\`.\`id\`",
  "    )",
  "  )",
  "FROM \`articles\`",
  "  LEFT JOIN \`categories\` AS \`articles>category\` ON \`articles\`.\`category_id\` = \`articles>category\`.\`id\`",
  "  LEFT JOIN \`brands\` AS \`articles>category>brand\` ON \`articles>category\`.\`brand_id\` = \`articles>category>brand\`.\`id\`"
]
`;
